8020190: Fatal: Bug in native code: jfieldID must match object

Reviewed-by: jgodinez, vadim